# words-admin

./: .env  .gitignore  Cargo.toml  test_command.txt  words.db
entity/: Cargo.toml
entity/src/: lib.rs  prelude.rs  word.rs
logs/: app.log.2025-12-29  words-admin.log.2025-12-29
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260126_080912_add_user.rs
src/: lib.rs  logging.rs  main.rs  word.rs  word_parser.rs
textbook/jsonl/: 3_first.json  4_first.json  5上.json  6_first.json  7上.json  8_first.json
