[package]
name = "words-admin"
version = "0.1.0"
edition = "2024"
default-run = "words-admin"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.8.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tokio = {version = "1", features=["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "chrono"] }
tracing-appender = "0.2"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
entity = { path = "./entity" }

[dev-dependencies]
entity = { path = "./entity" }
